test/tests/stages/14_pointers/valid/comparisons/compare_pointers.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[121]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  int
  identifier(b)
  ;
  int
  *
  identifier(a_ptr)
  =
  &
  identifier(a)
  ;
  int
  *
  identifier(a_ptr2)
  =
  &
  identifier(a)
  ;
  int
  *
  identifier(b_ptr)
  =
  &
  identifier(b)
  ;
  if
  (
  identifier(a_ptr)
  ==
  identifier(b_ptr)
  )
  {
  return
  const int(1)
  ;
  }
  if
  (
  identifier(a_ptr)
  !=
  identifier(a_ptr2)
  )
  {
  return
  const int(2)
  ;
  }
  if
  (
  !
  (
  identifier(a_ptr)
  ==
  identifier(a_ptr2)
  )
  )
  {
  return
  const int(3)
  ;
  }
  if
  (
  !
  (
  identifier(a_ptr)
  !=
  identifier(b_ptr)
  )
  )
  {
  return
  const int(4)
  ;
  }
  *
  identifier(b_ptr)
  =
  *
  identifier(a_ptr)
  ;
  if
  (
  identifier(a_ptr)
  ==
  identifier(b_ptr)
  )
  {
  return
  const int(5)
  ;
  }
  identifier(b_ptr)
  =
  identifier(a_ptr)
  ;
  if
  (
  identifier(b_ptr)
  !=
  identifier(a_ptr)
  )
  {
  return
  const int(6)
  ;
  }
  return
  const int(0)
  ;
  }
