test/tests/stages/14_pointers/invalid_types/complement_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(x)
  =
  const int(0)
  ;
  return
  (
  int
  )
  ~
  identifier(x)
  ;
  }
